force-app/main/default/objects/SalesArea__c/SalesArea__c.object-meta.xml
<CustomObject>
    <description>Structure sales based on a regional division of the market.</description>
    <label>Sales Area</label>
    <nameField>
        <displayFormat>SA-{000}</displayFormat>
        <label>Sales Area</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>