force-app/main/default/objects/SalesArea__c/fields/pkl_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>pkl_DistributionChannel__c</fullName>
    <description>Distinguish different sales methods</description>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpkv_DistributionChannel</valueSetName>
    </valueSet>
</CustomField>