force-app/main/default/objects/SalesArea__c/fields/pkl_Division__c.field-meta.xml
<CustomField>
    <fullName>pkl_Division__c</fullName>
    <description>Represent ETAS Solution Fields</description>
    <label>Division</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpkv_Division</valueSetName>
    </valueSet>
</CustomField>