force-app/main/default/objects/SalesArea__c/fields/pkl_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>pkl_SalesOrg__c</fullName>
    <description>Structure sales based on a regional division of the market</description>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gpkv_SalesOrg</valueSetName>
    </valueSet>
</CustomField>