force-app/main/default/objects/SalesArea__c/fields/txt_DistributionChannelDescription__c.field-meta.xml
<CustomField>
    <fullName>txt_DistributionChannelDescription__c</fullName>
    <description>Distribution Channel Description</description>
    <label>Distribution Channel Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>