force-app/main/default/objects/SalesArea__c/fields/txt_DivisionDescription__c.field-meta.xml
<CustomField>
    <fullName>txt_DivisionDescription__c</fullName>
    <description>Division Description</description>
    <label>Division Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>