force-app/main/default/objects/SalesArea__c/fields/txt_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>txt_SalesArea__c</fullName>
    <description>Sales Area</description>
    <inlineHelpText>Field Used to store the Sales Area</inlineHelpText>
    <label>Sales Area</label>
    <length>10</length>
    <type>Text</type>
</CustomField>