force-app/main/default/objects/SalesArea__c/fields/txt_SalesOrganizationDescription__c.field-meta.xml
<CustomField>
    <fullName>txt_SalesOrganizationDescription__c</fullName>
    <description>Sales Organization Description</description>
    <label>Sales Organization Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>