force-app/main/default/objects/SalesArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>pkl_SalesOrg__c</columns>
    <columns>pkl_DistributionChannel__c</columns>
    <columns>pkl_Division__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>